force-app/main/default/objects/Oficiales_X_Empresa__c/Oficiales_X_Empresa__c.object-meta.xml
<CustomObject>
    <label>Oficial por Empresa</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Corrrelativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oficiales por Empresa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>