force-app/main/default/objects/Oficiales_X_Empresa__c/fields/Codigo_Oficial_SAC__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Oficial_SAC__c</fullName>
    <label>Código Oficial SAC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>