force-app/main/default/objects/Oficiales_X_Empresa__c/fields/Oficial_SAC__c.field-meta.xml
<CustomField>
    <fullName>Oficial_SAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficial SAC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oficiales_por_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>