force-app/main/default/objects/Oficiales_X_Empresa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Codigo_Asesor__c</columns>
    <columns>Asesor__c</columns>
    <columns>Oficial_SAC__c</columns>
    <columns>Empresa__c</columns>
    <columns>Codigo_Oficial_SAC__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>